--- a/package.json
+++ b/package.json
@@ -9,16 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.2.8",
+    "jwt-decode": "^3.1.2",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@sanity/client": "^3.3.0",
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.12",
+    "axios": "^0.27.2",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
-    "typescript": "4.8.4"
+    "next": "12.1.6",
+    "postcss": "^8.4.17",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-google-login": "^5.2.2",
+    "react-icons": "^4.3.1",
+    "tailwindcss": "^3.1.8",
+    "typescript": "4.8.4",
+    "uuidv4": "^6.2.13",
+    "zustand": "^4.0.0-rc.1"
   }
 }
